tests/ui/feature-gates/feature-gate-f_strings.rs
fn main() {
    f"foo"; //~ ERROR f-strings are experimental
}
